code commit@Rahul
basic loop of add in data in purchase order form is done

--- a/src/main/resources/templates/layouts/listview/listofPurchaseOrder.html
+++ b/src/main/resources/templates/layouts/listview/listofPurchaseOrder.html
@@ -49,10 +49,11 @@
 															<th scope="col">PO Number</th>
 															<th scope="col">PO Date</th>
 															<!--<th scope="col">Purchase Through</th>-->
-															<th scope="col">Supplier Info</th>
-															<th scope="col">Supplier State</th>
+														
+														
 															<th scope="col">Supply Date</th>
 															<th scope="col">Delivery Date</th>
+															<th scope="col">Action</th>
 
 														</tr>
 													</thead>
@@ -62,8 +63,8 @@
 															<td th:text="${po.poNumber}">Garrett Winters</td>
 															<td th:text="${po.poDate}">Garrett Winters</td>
 															
-															<td th:text="${po.supplier.supplierName}">Garrett Winters</td>
-															<td th:text="${po.supplier.supplierState}">Garrett Winters</td>
+														
+														
 															<td th:text="${po.supplyDate}">Garrett Winters</td>
 															<td th:text="${po.deliveryDate}">Garrett Winters</td>
 															
