--- a/src/main/resources/templates/layouts/Master/purchaseOrder.html
+++ b/src/main/resources/templates/layouts/Master/purchaseOrder.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html  xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
+<head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>EBS</title>
@@ -120,8 +120,8 @@
 																<label class="form-label">GST</label> <label
 																	style="color: red">*</label> <select
 																	class="form-control" id="" title="gst" required>
-																	<option value="gst" selected>GST</option>
-																	<option value="nongst">Non-GST</option>
+																	<option value="G" selected>GST</option>
+																	<option value="N">Non-GST</option>
 
 																</select>
 															</div>
@@ -130,8 +130,8 @@
 																<label for="inputAddress">Cancellation Status</label> <select
 																	class="form-control" id="" title="cancellation status"
 																	th:field="*{cancStatus}" required>
-																	<option value="yes">Yes</option>
-																	<option value="no" selected>No</option>
+																	<option value="Y">Yes</option>
+																	<option value="N" selected>No</option>
 
 																</select>
 															</div>
@@ -153,8 +153,8 @@
 																class="form-control" id="" title="urgency"
 																th:field="*{natureOfPur}" required>
 
-																<option value="yes">Capital</option>
-																<option value="non" selected>Non-Capital</option>
+																<option value="C">Capital</option>
+																<option value="N" selected>Non-Capital</option>
 															</select>
 														</div>
 														<div class="form-group col-md-4">
@@ -162,8 +162,8 @@
 																class="form-control" id="" title="urgency"
 																th:field="*{openPo}" required>
 
-																<option value="yes" selected>Yes</option>
-																<option value="non">No</option>
+																<option value="Y" selected>Yes</option>
+																<option value="N">No</option>
 															</select>
 														</div>
 														<div class="form-group col-md-4">
@@ -171,8 +171,8 @@
 																class="form-control" id="" title="urgency"
 																th:field="*{poType}" required>
 
-																<option value="InterState" selected>Inter State</option>
-																<option value="IntraState">Intra State</option>
+																<option value="Ir" selected>Inter State</option>
+																<option value="Ia">Intra State</option>
 															</select>
 														</div>
 
@@ -182,8 +182,8 @@
 																class="form-control" id="purchaseThrough"
 																title="urgency" required
 																onchange="againstPurchaseThrough()">
-																<option value="quotation" selected>Quotation</option>
-																<option value="indent">Indent</option>
+																<option value="Q" selected>Quotation</option>
+																<option value="I">Indent</option>
 															</select>
 														</div>
 
@@ -248,9 +248,9 @@
 																id="currency" class="form-control" required
 																title="currency" th:field="*{currency}">
 																<option value=" ">Select</option>
-																	<option value=" I">INR</option>
-																		<option value=" U">USD</option>
-																
+																<option value=" I">INR</option>
+																<option value=" U">USD</option>
+
 
 
 															</select>
@@ -330,14 +330,14 @@
 																			style="width: 10px;">Effective Date</th>
 																		<th scope="col" class="text-center"
 																			style="width: 120px;">Qty Order</th>
-																	
+
 																		<th scope="col" class="text-center"
 																			style="width: 90px;">Total Item Cost</th>
 																		<th scope="col" class="text-center"
 																			style="width: 120px;">Total Item Cost(INR)</th>
 																		<th scope="col" class="text-center"
 																			style="width: 90px;">Remarks</th>
-																	
+
 
 																	</tr>
 																</thead>
@@ -348,7 +348,7 @@
 																		<td><select id="supplierId"
 																			class="form-control form-control-sm select"
 																			title="type" onchange="supplierInfo()">
-																			
+
 																				<option value="M" selected>Material</option>
 																				<option value="S">Service</option>
 
@@ -380,8 +380,8 @@
 																		</select></td>
 
 																		<td><input type="number"
-																			class="form-control form-control-sm"
-																			id="itemRate0" title="item rate"
+																			class="form-control form-control-sm" id="itemRate0"
+																			title="item rate"
 																			name="listPurchaseOrderItem[0].itemRate"></td>
 
 																		<td><input type="date" title="effective date"
@@ -394,10 +394,10 @@
 																			title="qty order" id="qtyOrder0"
 																			name="listPurchaseOrderItem[0].qtyOrder"></td>
 
-																	
+
 																		<td><input type="text"
-																			class="form-control form-control-sm"
-																			id="totalCost0" title="total item cost"></td>
+																			class="form-control form-control-sm" id="totalCost0"
+																			title="total item cost"></td>
 
 																		<td><input type="text"
 																			class="form-control form-control-sm"
@@ -408,7 +408,7 @@
 																			name="listPurchaseOrderItem[0].itemRemarks">
 																		</td>
 
-																		
+
 
 
 
@@ -429,6 +429,123 @@
 
 
 												<!--end detail box-->
+
+
+												<!-- detail tax block  -->
+
+												<div class="box">
+
+													<h5>Tax Info</h5>
+													<div class="box-body">
+
+														<input id="_cr" name="_cr" type="hidden" value="1">
+
+
+
+														<div class="table-responsive">
+															<table id="example" aria-describedby="example"
+																class="table table-striped display">
+																<thead>
+																	<tr>
+																		<th scope="col" class="text-center"
+																			style="width: 100px;">Freight</th>
+
+																		<th scope="col" class="text-center"
+																			style="width: 100px;">CGST in(%)</th>
+																		<th scope="col" class="text-center"
+																			style="width: 90px;">CGST Value</th>
+																		<th scope="col" class="text-center"
+																			style="width: 90px;">SGST in(%)</th>
+																		<th scope="col" class="text-center"
+																			style="width: 90px;">SGST value</th>
+																		<th scope="col" class="text-center"
+																			style="width: 10px;">IGST in (%)</th>
+																		<th scope="col" class="text-center"
+																			style="width: 120px;">IGST Value</th>
+																		<th scope="col" class="text-center"
+																			style="width: 90px;">Discount(%)</th>
+																		<th scope="col" class="text-center"
+																			style="width: 90px;">Discount Value</th>
+
+
+
+
+
+																	</tr>
+																</thead>
+
+																<tbody>
+																	<tr id="addr0">
+
+
+
+																		<!-- item code -->
+																		<td><input type="number"
+																			class="form-control form-control-sm"
+																			id="freight0" title="order date"
+																			name="listPurchaseOrderItem[0].freight"></td>
+
+																		<!-- item name -->
+																		<td><input type="text"
+																			class="form-control form-control-sm"
+																			id="cgstInPer0" title="item name"
+																			name="listPurchaseOrderItem[0].cgst" onkeyup="calulationOfCgst()"></td>
+
+																		<!-- UOM -->
+																		<td><input type="number" title="uom"
+																			class="form-control form-control-sm" id="cgstInValue0"
+																			name="listPurchaseOrderItem[0].cgstValue"></td>
+																		<!-- po qty   -->
+																		<td><input type="number"id="sgstInPer0"
+																			class="form-control form-control-sm" title="po qty"
+																			name="listPurchaseOrderItem[0].sgst" onkeyup="calulationOfSgst()"></td>
+																		<!-- inr qty -->
+																		<td><input type="number" 
+																			class="form-control form-control-sm"
+																			id="sgstInValue0" title="inv qty"
+																			name="listPurchaseOrderItem[0].sgstValue" ></td>
+
+																		<!-- rec qty  -->
+																		<td><input type="number"
+																			class="form-control form-control-sm"
+																			id="igstInPer0" title="rec qty"
+																			name="listPurchaseOrderItem[0].igst" onkeyup="calulationOfIgst()"></td>
+
+
+																		<!-- po rate curr -->
+
+																		<td><input type="number" 
+																			class="form-control form-control-sm"
+																			id="igstInValue0" title="po rate curr"
+																			name="listPurchaseOrderItem[0].igstValue"></td>
+
+																		<!-- po rate  -->
+																		<td><input type="number"
+																			class="form-control form-control-sm"
+																			id="descountInPer0" title="po rate"
+																			name="listPurchaseOrderItem[0].discPer" onkeyup="calulationOfDiscount()"></td>
+
+																		<td><input type="number"
+																			class="form-control form-control-sm"
+																			id="descountInValue0" title="po rate"
+																			name="listPurchaseOrderItem[0].discValue"></td>
+
+
+
+
+
+
+																	</tr>
+																	<tr id='addr1' />
+
+																</tbody>
+
+
+															</table>
+														</div>
+													</div>
+												</div>
+												<!--  detail tax block -->
 
 
 												<!--final div -->
@@ -505,7 +622,7 @@
 
 			$('#quotationDate').val('');
 
-			if (purchaseThrough == "quotation") {
+			if (purchaseThrough == "Q") {
 				console.log("quotation ")
 				// enable field
 				$("#quotationNumber").prop('disabled', false);
