--- a/src/main/resources/templates/layouts/Master/purchaseOrderApproval.html
+++ b/src/main/resources/templates/layouts/Master/purchaseOrderApproval.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>EBS</title>
@@ -49,8 +49,7 @@
 															<th scope="col">PO Number</th>
 															<th scope="col">PO Date</th>
 															<th scope="col">Po Type</th>
-															<th scope="col">Supplier</th>
-															<th scope="col">Supply Date</th>
+														
 															<th scope="col">Delivery Date</th>
 
 
@@ -70,8 +69,7 @@
 															<td th:text="${po.poDate}">Garrett Winters</td>
 															<td th:text="${po.poType}">Good Guys</td>
 															
-															<td th:text="${po.supplier.supplierName}">Garrett Winters</td>
-															<td th:text="${po.supplyDate}">Garrett Winters</td>
+														
 															<td th:text="${po.deliveryDate}">Good Guys</td>
 
 
@@ -156,7 +154,7 @@
 
 
 															<td><span> <a
-																		th:href="@{/openindent/view/{id}(id=${po.poNumber})}">view</a></span>
+																		th:href="@{/purchaseorder/view/{id}(id=${po.poNumber})}">view</a></span>
 															</td>
 
 
