--- a/src/main/resources/templates/layouts/view/viewPurchaseOrder.html
+++ b/src/main/resources/templates/layouts/view/viewPurchaseOrder.html
@@ -608,18 +608,17 @@
 												<!--end final div-->
 
 												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="button" value="Go back!" class="btn btn-danger"onclick="history.back()">
+												<input type="button" value="Go back!" class="btn btn-danger"onclick="history.back()">
 												</div>
 											</form>
 
 
 										</div>
 										<!-- /.box -->
-										<div
+										<!-- <div
 											style="width: parent; text-align-last: right; margin: 8px">
 											<a th:href="@{/purchaseorder/list}">View All PO</a>
-										</div>
+										</div> -->
 									</div>
 
 
