code commit@Rahul
jakson binding issue fixed using

--- a/src/main/resources/templates/layouts/Master/openIndent.html
+++ b/src/main/resources/templates/layouts/Master/openIndent.html
@@ -28,6 +28,8 @@
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
 
+<script type="text/javascript" th:src="@{/JS/myjs.js}"></script>
+
 
 
 <style>
