code commit@Rahul
correction in list of open indent , edit indent , view indent according changes

--- a/src/main/resources/templates/layouts/Master/openIndentApproval.html
+++ b/src/main/resources/templates/layouts/Master/openIndentApproval.html
@@ -55,10 +55,10 @@
 															<th scope="col">#</th>
 															<th scope="col">Indent Number</th>
 															<th scope="col">Indent Date</th>
-															<th scope="col">Indent Type</th>
+															
 
 
-															<th scope="col">Approval Status</th>
+															<th scope="col" class="text-center">Approval Status</th>
 
 
 
@@ -72,8 +72,7 @@
 															<td th:text="${iter.index}">1</td>
 															<td th:text="${indent.indentNumber}">Garrett Winters</td>
 															<td th:text="${indent.indentDate}">Garrett Winters</td>
-															<td th:text="${indent.indentType}">Good Guys</td>
-
+								
 
 
 															<td class="text-center"
