--- a/src/main/resources/templates/layouts/Master/gateEntry.html
+++ b/src/main/resources/templates/layouts/Master/gateEntry.html
@@ -144,7 +144,7 @@
 															<label class="form-label">Supplier Code</label> <label
 																style="color: red">*</label> <select
 																class="form-control" id="" title="supplier code"
-																th:field="*{supplier}">
+																th:field="*{partyMaster}">
 																<option value="">Select</option>
 																<option th:each="party :  ${partyMasterList}"
 																	th:text="${party.partyName}"
@@ -193,7 +193,7 @@
 															<label for="inputAddress">Transporter Code</label><label
 																style="color: red">*</label> <select
 																class="form-control" id="" title="entry type"
-																th:field="*{entryType}" required>
+																th:field="*{entryType}">
 
 
 															</select>
@@ -316,7 +316,7 @@
 
 																		<!-- item description  -->
 																		
-																		<td><input type="number"
+																		<td><input type="text"
 																			class="form-control form-control-sm"
 																			id="orderItemCode0" title="item description"
 																			name="gateEntryItemDetails[0].itemDescription"></td>
@@ -329,7 +329,7 @@
 
 																		<!-- qty  -->
 																		
-																		<td><input type="number"
+																		<td><input type="number"id="qtyOrder0"
 																			class="form-control form-control-sm" title="net qty"
 																			name="gateEntryItemDetails[0].netQty"></td>
 
@@ -337,14 +337,14 @@
 																		
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="technicalQualification" title="status"
+																			id="orderItemuom" title="status"
 																			name="gateEntryItemDetails[0].uom"></td>
 
 																		<!-- incoming part sr no  -->
 																		
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="orderItemuom" title=""></td>
+																			id="" title=""></td>
 
 
 																		<!-- claim part   -->
