code commit@Rahul
correction in database structure on purchase module

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -157,7 +157,7 @@
 						<ul class="treeview-menu">
 
 							<li><a th:href="@{/openindent/}"><i
-									class="fa fa-circle-o"></i> Open Indent</a></li>
+									class="fa fa-circle-o"></i> Indent</a></li>
 							<li><a th:href="@{/openindent/approve}"><i
 									class="fa fa-circle-o"></i> Indent Approval</a></li>
 							<li><a th:href="@{/requestquotation/}"><i
@@ -184,7 +184,7 @@
 			<!-- Whare house module  -->
 
 			<li class="treeview"><a href="#"> <i class="fa fa-dashboard"></i>
-					<span>WhareHouse</span> <i class="fa fa-angle-left pull-right"></i>
+					<span>WareHouse</span> <i class="fa fa-angle-left pull-right"></i>
 			</a>
 				<ul class="treeview-menu">
 
