--- a/src/main/resources/templates/layouts/Master/openIndent.html
+++ b/src/main/resources/templates/layouts/Master/openIndent.html
@@ -137,8 +137,8 @@
 
 												<div class="form-group col-md-4">
 													<label for="inputAddress">Department Name</label> <select
-														class="form-control" title="employee code" id="employee"
-														required th:field="*{deptCode}">
+														class="form-control" title="employee code" id="departmentcode"
+														required th:field="*{deptCode}" readonly>
 														<option value="">Select Department</option>
 														<option th:each="department :  ${departmentList}"
 															th:text="${department.deptName}"
@@ -341,9 +341,9 @@
 
 
 																		<!-- units  -->
-																		<td><input type="text"
+																		<td><input type="text" id="uomCode0"
 																			class="form-control form-control-sm" title=""
-																			id="salaryTo" required></td>
+																			required readonly></td>
 
 
 																		<!-- total value inr-total value  -->
@@ -525,7 +525,7 @@
 																		+ "].itemRate' onkeyup='indentItemRate()' style='text-align: right' ></td>"
 
 																		/* units  */
-																		+ "<td><input type='text' class='form-control form-control-sm' id='salaryTo'></td>" //units 
+																		+ "<td><input type='text' class='form-control form-control-sm' id='uomCode"+idIndex+"' readonly></td>" //units 
 
 																		/*  total value  */
 																		+ "<td><input type='text' class='form-control form-control-sm floatNumberField' id='totalValueInr"+idIndex+"' required  style='text-align: right'  readonly></td>"
@@ -631,6 +631,10 @@
 
 							$("#indItemDescription" + idIndex).val(
 									data.item.itemCode);
+							console.log("uom detail is : " +data.item.uom.uomCode)
+							$("#uomCode" + idIndex).val(
+									data.item.uom.uomCode);
+							
 							$("#qtyInStock" + idIndex).val(
 									data.itemOpening.currentStock)
 
