--- a/src/main/resources/templates/layouts/Master/QuotationDetail.html
+++ b/src/main/resources/templates/layouts/Master/QuotationDetail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
 <meta charset="utf-8">
@@ -96,7 +96,7 @@
 																	</div>
 																	<div class="form-group col-md-4">
 																		<label for="inputPassword4">Quotation Date</label> <input
-																			type="date" class="form-control" id="inputPassword4"
+																			type="date" class="form-control" id="quotationDate"
 																			placeholder="quotation date" th:field="*{quotDate}">
 																	</div>
 																	<div class="form-group col-md-4">
@@ -115,7 +115,7 @@
 																		<label class="form-label">RFQ Number </label> <label
 																			style="color: red">*</label> <select
 																			class="form-control"
-																			onchange="changeRequestForQuotation()"
+																			onchange="changeRequestForQuotation()"  
 																			title="RFQ Number" id="rfqNum" th:field="*{rfqNo}">
 																			<option value="">Select RFQ</option>
 																			<option th:each="rfq :  ${listRfQuotation}"
@@ -196,7 +196,8 @@
 																<div class="form-group col-md-4">
 																	<label for="inputAddress">Form Type</label> <input
 																		type="text" class="form-control" id="inputAddress"
-																		placeholder="from type">  //  <!-- th:field="*{quotType}" -->
+																		placeholder="from type"> //
+																	<!-- th:field="*{quotType}" -->
 																</div>
 															</div>
 															<!-- /.box-body -->
@@ -212,9 +213,9 @@
 																		class="form-control" onchange="changeCurrency()"
 																		title="currency Name" required id="currencyCode"
 																		th:field="*{currencyCode}">
-																		<option value="">Select </option>
+																		<option value="">Select</option>
 																		<option value="I">INR</option>
-																		<option value="U">USD </option>
+																		<option value="U">USD</option>
 																		<!-- <option th:each="currency :  ${listCurrencyMaster}"
 																			th:text="${currency.currencyCode}"
 																			th:value=" ${currency.currencyValue}"></option> -->
@@ -256,8 +257,7 @@
 																<div class="form-group col-md-4">
 																	<label for="inputEmail4">Term and Condition</label> <input
 																		type="text" class="form-control" id="inputEmail4"
-																		placeholder="delivery period"
-																		>
+																		placeholder="delivery period">
 																</div>
 
 
@@ -408,12 +408,16 @@
 																	<label for="inputEmail3" class="col-md-2 control-label">Trade
 																		Discount</label>
 																	<div class="col-md-4">
-																		<input type="number" class="form-control" onkeyup="totalDiscountInPercentFun()"
-																			id="totalDiscountInPercent" placeholder="Total Discount(%)" name="quotationItem[0].discountValue">
+																		<input type="number" class="form-control"
+																			onkeyup="totalDiscountInPercentFun()"
+																			id="totalDiscountInPercent"
+																			placeholder="Total Discount(%)"
+																			name="quotationItem[0].discountValue">
 																	</div>
 																	<div class="col-md-4">
 																		<input type="number" class="form-control"
-																			id="totalDiscountInValue" placeholder="Total Discount">
+																			id="totalDiscountInValue"
+																			placeholder="Total Discount">
 																	</div>
 																</div>
 															</div>
@@ -424,8 +428,10 @@
 																<div class="form-group m-5">
 																	<label for="inputEmail3" class="col-md-2 control-label">Discount</label>
 																	<div class="col-md-4">
-																		<input type="number" class="form-control" onkeyup="discountInPercentFun()"
-																			id="discountInPercent" placeholder="Discount(%)"  name="quotationItem[0].discount">
+																		<input type="number" class="form-control"
+																			onkeyup="discountInPercentFun()"
+																			id="discountInPercent" placeholder="Discount(%)"
+																			name="quotationItem[0].discount">
 																	</div>
 																	<div class="col-md-4">
 																		<input type="number" class="form-control"
@@ -434,7 +440,7 @@
 																</div>
 															</div>
 
-														
+
 
 															<div class="form-group row">
 
@@ -442,7 +448,7 @@
 																	<label for="inputEmail3" class="col-md-2 control-label">Packing</label>
 																	<div class="col-md-4">
 																		<input type="number" class="form-control" id="packing"
-																			placeholder="Packing"name="quotationItem[0].packing">
+																			placeholder="Packing" name="quotationItem[0].packing">
 																	</div>
 
 																</div>
@@ -468,12 +474,15 @@
 																<div class="form-group m-5">
 																	<label for="inputEmail3" class="col-md-2 control-label">SGST(%)</label>
 																	<div class="col-md-4">
-																		<input type="number" class="form-control" id="sgstInPercent"
-																			placeholder="Sgst(%)" onkeyup="sgstInPercentFun()" name="quotationItem[0].sgst">
+																		<input type="number" class="form-control"
+																			id="sgstInPercent" placeholder="Sgst(%)"
+																			onkeyup="sgstInPercentFun()"
+																			name="quotationItem[0].sgst">
 																	</div>
 																	<div class="col-md-4">
-																		<input type="number" class="form-control" id="sgstInValue"
-																			placeholder="Sgst" name="quotationItem[0].sgstValue">
+																		<input type="number" class="form-control"
+																			id="sgstInValue" placeholder="Sgst"
+																			name="quotationItem[0].sgstValue">
 																	</div>
 																</div>
 															</div>
@@ -483,12 +492,15 @@
 																<div class="form-group m-5">
 																	<label for="inputEmail3" class="col-md-2 control-label">CGST(%)</label>
 																	<div class="col-md-4">
-																		<input type="number" class="form-control" id="cgstInPercent"
-																			placeholder="Cgst(%)" onkeyup="cgstInPercentFun()" name="quotationItem[0].cgst">
+																		<input type="number" class="form-control"
+																			id="cgstInPercent" placeholder="Cgst(%)"
+																			onkeyup="cgstInPercentFun()"
+																			name="quotationItem[0].cgst">
 																	</div>
 																	<div class="col-md-4">
-																		<input type="number" class="form-control" id="cgstInValue"
-																			placeholder="Cgst" name="quotationItem[0].cgstValue">
+																		<input type="number" class="form-control"
+																			id="cgstInValue" placeholder="Cgst"
+																			name="quotationItem[0].cgstValue">
 																	</div>
 																</div>
 															</div>
@@ -498,12 +510,15 @@
 																<div class="form-group m-5">
 																	<label for="inputEmail3" class="col-md-2 control-label">IGST(%)</label>
 																	<div class="col-md-4">
-																		<input type="number" class="form-control" id="igstInPercent"
-																			placeholder="Igst(%)" onkeyup="igstInPercentFun()"  name="quotationItem[0].igst">
+																		<input type="number" class="form-control"
+																			id="igstInPercent" placeholder="Igst(%)"
+																			onkeyup="igstInPercentFun()"
+																			name="quotationItem[0].igst">
 																	</div>
 																	<div class="col-md-4">
-																		<input type="number" class="form-control" id="igstInValue"
-																			placeholder="Igst"  name="quotationItem[0].igstValue">
+																		<input type="number" class="form-control"
+																			id="igstInValue" placeholder="Igst"
+																			name="quotationItem[0].igstValue">
 																	</div>
 																</div>
 															</div>
@@ -531,12 +546,12 @@
 																				placeholder="Total Value">
 																		</div>
 																	</div>
-																	
+
 																	<div class="row ">
 																		<div class="form-group col-md-6">
 																			<label for="inputEmail4">Total Value (INR)</label> <input
 																				type="text" class="form-control" id="totalCount"
-																				placeholder="Total Value (INR)" >
+																				placeholder="Total Value (INR)">
 																		</div>
 																	</div>
 
@@ -734,12 +749,16 @@
 			totalInrValue = itemRate * itemQty;
 
 			document.getElementById("totalInrValue0").value = totalInrValue;
-			
+
 			calculationOfTotalValue();
 
 		}
-		
-		
+
+		$(document)
+				.ready(
+						function() {
+							document.getElementById("quotationDate").valueAsDate = new Date();
+						});
 	</script>
 	<!--   <section class="content">
         
